--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,8 +37,11 @@ header .header-1 .logo{
   color: #666;
 }
 
-header .header-1 .logo i{
+header .header-1 .logo img{
   color: var(--blue);
+  width: 8rem;
+  border-radius: 10%;
+  display: flex;
 }
 
 header .header-1 .form-container form{
@@ -114,6 +117,12 @@ font-size: 3rem;
 color: #fff;
 cursor: pointer;
 display: none;
+}
+
+header .header-2.header-active{
+  position: fixed;
+  top: 0; left: 0;
+  box-shadow: -0 .2rem .3rem rgba(0, 0,0, 0.578);
 }
 
 
@@ -192,6 +201,15 @@ display: none;
     header .header-2 .navbar ul li a{
       font-size: 2.5rem;
       display: block;
+    }
+
+    .fa-times{
+      transform: rotate(180deg);
+    }
+
+    header .header-2 .nav-toggle{
+      top: 50%;
+      opacity: 1;
     }
 
 }
