--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,65 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+  text-transform: capitalize;
+  font-family: 'Exo 2',sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+#header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1.5rem 2.5rem;
+  color: #fff;
+}
+
+#header .fa-bars {
+  font-size: 3rem;
+  z-index: 10000;
+  cursor: pointer;
+}
+
+.logo {
+  color: #fff;
+  font-size: 2rem;
+}
+
+.logo img {
+  border-radius: 10%;
+  width: 8rem;
+  padding: 0 .5rem;
+}
+
+.logo h1 {
+  display: inline;
+}
+
+.logo:hover {
+  text-decoration: none;
+}
+
+#home {
+  min-height: 100vh;
+  width: 100vw;
+  background: #333;
+}
+/*# sourceMappingURL=style.css.map */
