--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,1 +1,61 @@
-$blue
+/*# sourceMappingURL=style.css.map */
+$darkBlue #00008b
+$white #fff
+$grey #333;
+
+* {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all .2s linear;
+	transition: all .2s linear;
+	text-transform: capitalize;
+	font-family: 'Exo 2',sans-serif;
+}
+html {
+	font-size: 62.5%;
+	scroll-behavior: smooth;
+}
+body {
+	overflow-x: hidden;
+}
+#header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1.5rem 2.5rem;
+	color: #00008b;
+
+  .fa-bars{
+    font-size: 3rem;
+    z-index: 10000;
+    cursor: pointer;
+  }
+}
+
+.logo{
+  color: $darkBlue;
+  font-size: 2rem;
+
+  img{
+    border-radius: 10%;
+    width: 8rem;
+    padding: 0 .5rem;
+  }
+  h1{
+    display: inline;
+  }
+
+  &:hover{
+    text-decoration: none;
+  }
+}
+
+
+#home{
+  min-height: 100vh;
+  width: 100vw;
+  background: $grey;
+ 
+}
