--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-transition: all .2s linear;
   transition: all .2s linear;
   text-transform: capitalize;
@@ -23,13 +23,13 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 1.5rem 2.5rem;
-  color: #fff;
+  color: #00008b;
 }
 
 #header .fa-bars {
@@ -38,28 +38,125 @@ body {
   cursor: pointer;
 }
 
-.logo {
-  color: #fff;
-  font-size: 2rem;
+#header .logo {
+  color: #00008b;
+  font-size: 1rem;
 }
 
-.logo img {
+#header .logo img {
   border-radius: 10%;
   width: 8rem;
   padding: 0 .5rem;
 }
 
-.logo h1 {
-  display: inline;
+#header .logo:hover {
+  text-decoration: none;
 }
 
-.logo:hover {
+#header .left .fa-shopping-cart {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#header .left .search-container {
+  display: inline;
+  position: relative;
+}
+
+#header .left .search-container #search {
+  position: absolute;
+  top: -1.5rem;
+  right: .8rem;
+  height: 3.5rem;
+  width: 3.5rem;
+  font-size: 1.5rem;
+  padding: 0 1rem;
+  border: none;
+  outline: none;
+  border-radius: 5rem;
+}
+
+#header .left .search-container #search:hover, #header .left .search-container #search:focus {
+  width: 25rem;
+}
+
+#header .left .search-container .fa-search {
+  position: absolute;
+  top: -.7rem;
+  left: -3.5rem;
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 1;
+  color: #00008b;
+}
+
+#header .left .search-container .fa-search:hover ~ #search {
+  width: 25rem;
+}
+
+#header .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(24, 22, 22, 0.7);
+  padding: 0;
+  display: none;
+}
+
+#header .navbar ul {
+  height: 100%;
+  width: 35rem;
+  background: #333;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  list-style: none;
+}
+
+#header .navbar ul li {
+  margin: .5rem 0;
+}
+
+#header .navbar ul li a {
+  display: block;
+  height: 4rem;
+  width: 25rem;
+  background: #fff;
+  color: #333;
+  border-radius: 5rem;
+  text-align: center;
+  font-size: 2rem;
+  line-height: 4rem;
+}
+
+#header .navbar ul li a:hover {
   text-decoration: none;
+  background: #FF0000;
+  letter-spacing: .3rem;
+  color: #fff;
 }
 
 #home {
   min-height: 100vh;
   width: 100vw;
   background: #333;
+}
+
+.fa-times {
+  -webkit-transform: translatex(27rem);
+          transform: translatex(27rem);
+  padding-top: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
