--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,14 +1,8 @@
 /*# sourceMappingURL=style.css.map */
-$darkBlue #00008b
-$white #fff
-$grey #333;
-
 * {
 	margin: 0;
 	padding: 0;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	-webkit-transition: all .2s linear;
 	transition: all .2s linear;
 	text-transform: capitalize;
 	font-family: 'Exo 2',sans-serif;
@@ -32,30 +26,122 @@ body {
     z-index: 10000;
     cursor: pointer;
   }
+
+  .logo{
+    color: #00008b;
+    font-size: 1rem;
+  
+    img{
+      border-radius: 10%;
+      width: 8rem;
+      padding: 0 .5rem;
+    }
+  
+  
+    &:hover{
+      text-decoration: none;
+    }
+  }
+
+  .left{
+
+    .fa-shopping-cart{
+      font-size: 2rem;
+      cursor: pointer;
+    }
+
+    .search-container{
+      display: inline;
+      position: relative;
+
+      #search{
+        position: absolute;
+        top: -1.5rem; right: .8rem;
+        height: 3.5rem;
+        width: 3.5rem;
+        font-size: 1.5rem;
+        padding: 0 1rem;
+        border: none;
+        outline: none;
+        border-radius: 5rem;
+        &:hover,
+        &:focus{
+          width: 25rem;
+        }
+      }
+
+      .fa-search{
+        position: absolute;
+        top: -.7rem; left: -3.5rem;
+        font-size: 2rem;
+        cursor: pointer;
+        z-index: 1;
+        color: #00008b;
+
+        &:hover ~ #search{
+          width: 25rem;
+        }
+      }
+    }
+  }
+
+  .navbar{
+    position: fixed;
+    top: 0; left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(24, 22, 22, 0.7);
+    padding: 0;
+    display: none;
+
+    ul{
+      height: 100%;
+      width: 35rem;
+      background: #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-flow: column;
+      list-style: none;
+
+      li{
+        margin: .5rem 0;
+
+        a{
+          display: block;
+          height: 4rem;
+          width: 25rem;
+          background: #fff;
+          color: #333;
+          border-radius: 5rem;
+          text-align: center;
+          font-size: 2rem;
+          line-height: 4rem;
+
+          &:hover{
+            text-decoration: none;
+            background: #FF0000;
+            letter-spacing: .3rem;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
 }
 
-.logo{
-  color: $darkBlue;
-  font-size: 2rem;
 
-  img{
-    border-radius: 10%;
-    width: 8rem;
-    padding: 0 .5rem;
-  }
-  h1{
-    display: inline;
-  }
-
-  &:hover{
-    text-decoration: none;
-  }
-}
 
 
 #home{
   min-height: 100vh;
   width: 100vw;
-  background: $grey;
+  background: #333;
  
+}
+
+
+.fa-times{
+  transform: translatex(27rem);
+  padding-top: 1rem;
 }
