--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 1.5rem 2.5rem;
-  color: #00008b;
+  color: #fff;
 }
 
 #header .fa-bars {
@@ -39,7 +39,7 @@ body {
 }
 
 #header .logo {
-  color: #00008b;
+  color: #fff;
   font-size: 1rem;
 }
 
@@ -87,7 +87,7 @@ body {
   font-size: 2rem;
   cursor: pointer;
   z-index: 1;
-  color: #00008b;
+  color: #fff;
 }
 
 #header .left .search-container .fa-search:hover ~ #search {
@@ -149,14 +149,131 @@ body {
 }
 
 #home {
+  background: #333;
+}
+
+#home .slide {
   min-height: 100vh;
   width: 100vw;
-  background: #333;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#home .slide .image img {
+  width: 50vw;
+}
+
+#home .slide .content h1 {
+  font-size: 4rem;
+  color: #fff;
+}
+
+#home .slide .content p {
+  font-size: 1.7rem;
+  color: #ccc;
+}
+
+#home .slide .content .stars {
+  margin: 1rem;
+}
+
+#home .slide .content .stars i {
+  font-size: 1.5rem;
+  padding-right: .5rem;
+  color: gold;
+}
+
+#home .slide .content .price {
+  color: #FF0000;
+  font-size: 3.5rem;
+  margin: .5rem 0;
+}
+
+#home .slide .content button {
+  outline: none;
+  border: none;
+  height: 4rem;
+  width: 20rem;
+  background: #00008b;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: .5rem 0;
+  border-radius: 3rem;
+  text-transform: capitalize;
+}
+
+#home .slide .content button:hover {
+  background: #FF0000;
+  letter-spacing: .1rem;
+}
+
+#home .owl-nav .owl-next, #home .owl-nav .owl-prev {
+  position: absolute;
+  top: 45%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: #FF0000;
+  font-size: 6rem;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+#home .owl-nav .owl-next {
+  right: 1rem;
+}
+
+#home .owl-nav .owl-prev {
+  left: 1rem;
+}
+
+#home .owl-dots {
+  position: absolute;
+  bottom: 15%;
+  left: 50%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+}
+
+#home .owl-dots .owl-dot {
+  border: none;
+  outline: none;
 }
 
 .fa-times {
   -webkit-transform: translatex(27rem);
           transform: translatex(27rem);
   padding-top: 1rem;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 55%;
+  }
+  #home {
+    padding-bottom: 4rem;
+  }
+  #home .owl-dots {
+    display: none;
+  }
+  #home .slide {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: column-reverse;
+            flex-flow: column-reverse;
+  }
+  #home .slide .content {
+    padding: 1rem;
+  }
+  #home .slide .image img {
+    width: 100vw;
+  }
 }
 /*# sourceMappingURL=style.css.map */
