--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,23 @@
 /*# sourceMappingURL=style.css.map */
+@mixin button () {
+  outline: none;
+  border: none;
+  height: 4rem;
+  width: 20rem;
+  background: #00008b;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: .5rem 0;
+  border-radius: 3rem;
+  text-transform: capitalize;
+
+  &:hover{
+    background: #FF0000;
+    letter-spacing: .1rem;
+  }
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -19,7 +38,7 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	padding: 1.5rem 2.5rem;
-	color: #00008b;
+	color: #fff;
 
   .fa-bars{
     font-size: 3rem;
@@ -28,7 +47,7 @@ body {
   }
 
   .logo{
-    color: #00008b;
+    color: #fff;
     font-size: 1rem;
   
     img{
@@ -76,7 +95,7 @@ body {
         font-size: 2rem;
         cursor: pointer;
         z-index: 1;
-        color: #00008b;
+        color: #fff;
 
         &:hover ~ #search{
           width: 25rem;
@@ -134,14 +153,122 @@ body {
 
 
 #home{
-  min-height: 100vh;
-  width: 100vw;
   background: #333;
- 
+
+  .slide{
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    .image{
+      img{
+        width: 50vw;
+      }
+    }
+
+    .content{
+      h1{
+        font-size: 4rem;
+        color: #fff;
+      }
+
+      p{
+        font-size: 1.7rem;
+        color: #ccc;
+      }
+
+      .stars{
+        margin: 1rem;
+
+        i{
+          font-size: 1.5rem;
+          padding-right: .5rem;
+          color: gold;
+        }
+      }
+
+      .price{
+        color: #FF0000;
+        font-size: 3.5rem;
+        margin: .5rem 0;
+      }
+
+      button{
+        @include button();
+      }
+    }
+  }
+
+  .owl-nav{
+    .owl-next, .owl-prev{
+      position: absolute;
+      top: 45%;
+      transform: translateY(-50%);
+      color: #FF0000;
+      font-size: 6rem;
+      background: none;
+      border:  none;
+      outline: none;
+    }
+
+    .owl-next{
+      right: 1rem;
+    }
+
+    .owl-prev{
+      left: 1rem;
+    }
+  }
+
+  .owl-dots{
+     position: absolute;
+     bottom: 15%; left: 50%;
+     transform: translateX(50%);
+
+     .owl-dot{
+       border: none;
+       outline: none;
+     }
+  }
 }
+ 
 
 
 .fa-times{
   transform: translatex(27rem);
   padding-top: 1rem;
+}
+
+
+
+// media queries
+
+@media (max-width: 768px){
+  html{
+    font-size: 55%;
+  }
+  
+  #home{
+    padding-bottom: 4rem;
+
+    .owl-dots{
+      display: none;
+    }
+
+    .slide{
+      flex-flow: column-reverse;
+
+      .content{
+        padding: 1rem;
+      }
+
+      .image{
+        img{
+          width: 100vw;
+        }
+      }
+    }
+  }
 }
