--- a/styles/style.scss
+++ b/styles/style.scss
@@ -449,7 +449,7 @@ background: radial-gradient(circle, rgba(2,36,250,0.9500175070028011) 0%, rgba(1
   #product{
     .product-container{
       .title{
-        margin: 0;
+        margin-left: 0;
         text-align: center;
       }
     }
