--- a/styles/style.css
+++ b/styles/style.css
@@ -450,6 +450,63 @@ body {
           transform: scale(1);
 }
 
+#review {
+  height: 90vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  background: url(../assets/images/review.jpg), -webkit-gradient(linear, left top, left bottom, from(blue), to(blue)) no-repeat;
+  background: url(../assets/images/review.jpg), linear-gradient(blue, blue) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-blend-mode: screen;
+  position: relative;
+}
+
+#review .heading {
+  color: #00008b;
+  text-align: center;
+  font-size: 3rem;
+  padding-top: 5rem;
+  margin: 2rem 0;
+  position: relative;
+  padding-top: 7rem;
+  color: red;
+}
+
+#review .heading::after {
+  content: '';
+  position: absolute;
+  bottom: -1rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: .3rem;
+  width: 60%;
+  background: #FF0000;
+}
+
+#review .heading::after {
+  background: #fff;
+}
+
+#review .box-cantainer {
+  height: 100%;
+  width: 100%;
+}
+
 .fa-times {
   -webkit-transform: translatex(27rem);
           transform: translatex(27rem);
