--- a/styles/style.css
+++ b/styles/style.css
@@ -505,6 +505,47 @@ body {
 #review .box-cantainer {
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#review .box-cantainer .review-slider .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#review .box-cantainer .review-slider .box .image {
+  margin-top: 10rem;
+  margin-left: 3rem;
+}
+
+#review .box-cantainer .review-slider .box .image img {
+  height: 10rem;
+  width: 10rem;
+  border-radius: 50% 50% 50% 0%;
+  border: .5rem solid orangered;
+}
+
+#review .box-cantainer .review-slider .box .comment {
+  height: 20rem;
+  width: 45rem;
+  background: #fff;
+  border-radius: 2% 2% 0% 40%;
+  padding-top: 2rem;
 }
 
 .fa-times {
