--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,8 @@ body {
 #header .navbar ul {
   height: 100%;
   width: 35rem;
-  background: #7a7a7a;
+  background: #020024;
+  background: radial-gradient(circle, #020024 0%, rgba(9, 9, 121, 0.846325) 22%, #00d4ff 92%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -586,6 +587,146 @@ body {
   color: #FF0000;
 }
 
+#offer {
+  min-height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+#offer .heading {
+  color: #00008b;
+  text-align: center;
+  font-size: 3rem;
+  padding-top: 5rem;
+  margin: 2rem 0;
+  position: relative;
+}
+
+#offer .heading::after {
+  content: '';
+  position: absolute;
+  bottom: -1rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: .3rem;
+  width: 60%;
+  background: #FF0000;
+}
+
+#offer .images {
+  min-height: 20vh;
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#offer .images .box {
+  height: 25rem;
+  width: 30rem;
+  text-align: center;
+  margin: 2rem;
+}
+
+#offer .images .box img {
+  height: 20rem;
+  width: 30rem;
+}
+
+#offer .images .box h3 {
+  color: #FF0000;
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+
+#offer .deal {
+  background: url(../assets/images/farmacia-1.jpg), -webkit-gradient(linear, left top, left bottom, from(red), to(red)) no-repeat;
+  background: url(../assets/images/farmacia-1.jpg), linear-gradient(red, red) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-blend-mode: screen;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2rem 0;
+  width: 100%;
+}
+
+#offer .deal .image img {
+  height: 50vh;
+}
+
+#offer .deal .content {
+  text-shadow: .1rem .1rem .3rem;
+}
+
+#offer .deal .content h4 {
+  font-size: 4rem;
+  color: #00008b;
+}
+
+#offer .deal .content p {
+  font-size: 2rem;
+  color: #fff;
+}
+
+#offer .deal .content .stars i {
+  color: gold;
+  font-size: 1.5rem;
+}
+
+#offer .deal .content .price {
+  font-size: 3rem;
+  color: #fff;
+}
+
+#offer .deal .content button {
+  outline: none;
+  border: none;
+  height: 4rem;
+  width: 20rem;
+  background: #00008b;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: .5rem 0;
+  border-radius: 3rem;
+  text-transform: capitalize;
+}
+
+#offer .deal .content button:hover {
+  background: #FF0000;
+  letter-spacing: .1rem;
+}
+
+#offer .deal .content button:hover {
+  background: #FF0000;
+}
+
 .fa-times {
   -webkit-transform: translatex(27rem);
           transform: translatex(27rem);
@@ -622,11 +763,11 @@ body {
 
 @media (max-width: 600px) {
   #review .heading {
-    padding-top: 10rem;
+    padding-top: 15rem;
   }
   #review .box-container .review-slider .box {
     position: relative;
-    height: 45vh;
+    height: 50vh;
   }
   #review .box-container .review-slider .box .image {
     position: absolute;
@@ -637,9 +778,8 @@ body {
     border-radius: 5rem;
   }
   #review .box-container .review-slider .box .comment {
-    border-radius: 1rem;
+    border-radius: .8rem;
     text-align: center;
-    width: 35rem;
   }
   #review .box-container .review-slider .box .comment h3 {
     text-align: center;
