--- a/styles/style.scss
+++ b/styles/style.scss
@@ -136,7 +136,8 @@ body {
     ul{
       height: 100%;
       width: 35rem;
-      background: rgb(122, 122, 122);
+      background: rgb(2,0,36);
+      background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,0.846325167037862) 22%, rgba(0,212,255,1) 92%);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -173,7 +174,6 @@ body {
 
 
 #home{
-  // background: rgb(153, 153, 153);
   background: rgb(2,36,250);
 background: radial-gradient(circle, rgba(2,36,250,0.9500175070028011) 0%, rgba(12,185,240,0.9836309523809523) 50%, rgba(11,51,194,1) 100%);
 
@@ -511,7 +511,96 @@ background: radial-gradient(circle, rgba(2,36,250,0.9500175070028011) 0%, rgba(1
   }
 }
 
+// offer part / parte oferecer
 
+#offer{
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+
+  .heading{
+    @include heading();
+  }
+
+  .images{
+    min-height: 20vh;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+    .box{
+      height: 25rem;
+      width: 30rem;
+      text-align: center;
+      margin: 2rem;
+
+      img{
+        height: 20rem;
+        width: 30rem;
+      }
+
+      h3{
+        color: #FF0000;
+        font-size: 2.5rem;
+        margin: 1rem 0;
+      }
+    }
+  }
+
+  .deal{
+    background: url(../assets/images/farmacia-1.jpg), linear-gradient(red, red) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-blend-mode: screen;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0;
+    width: 100%;
+
+    .image{
+      img{
+        height: 50vh;
+      }
+    }
+
+    .content{
+      text-shadow: .1rem .1rem .3rem;
+
+      h4{
+        font-size: 4rem;
+        color: #00008b;
+      }
+      p{
+        font-size: 2rem;
+        color: #fff;
+      }
+      .stars{
+        i{
+          color: gold;
+          font-size: 1.5rem;
+        }
+      }
+      .price{
+        font-size: 3rem;
+        color: #fff;
+      }
+
+      button{
+        @include button();
+
+        &:hover{
+          background: #FF0000;
+        }
+      }
+    }
+  }
+}
 
 
 
@@ -567,13 +656,13 @@ background: radial-gradient(circle, rgba(2,36,250,0.9500175070028011) 0%, rgba(1
 @media (max-width: 600px){
   #review{
     .heading{
-      padding-top: 10rem;
+      padding-top: 15rem;
     }
     .box-container{
       .review-slider{
         .box{
           position: relative;
-          height: 45vh;
+          height: 50vh;
 
           .image{
             position: absolute;
@@ -586,9 +675,8 @@ background: radial-gradient(circle, rgba(2,36,250,0.9500175070028011) 0%, rgba(1
           }
 
           .comment{
-            border-radius: 1rem;
+            border-radius: .8rem;
             text-align: center;
-            width: 35rem;
 
             h3{
               text-align: center;
